# swedish-sortition

./: .gitignore  README.md  criteria.json.example  pyproject.toml  requirements.txt  run.py  run_parallel.py  swedish_sortition.py
services/: fake_data_generator.py  personnummer_generator.py  writer.py
